--- a/server/package.json
+++ b/server/package.json
@@ -4,8 +4,20 @@
   "description": "",
   "main": "index.js",
   "scripts": {
-    "test": "echo \"Error: no test specified\" && exit 1"
+    "test": "echo \"Error: no test specified\" && exit 1",
+    "dev": "nodemon --watch \"src/**\" --ext \"ts,json\" --exec \"ts-node src/index.ts\""
   },
   "author": "Anthony Chablov",
-  "license": "ISC"
+  "license": "MIT",
+  "dependencies": {
+    "dotenv": "^16.0.3",
+    "express": "^4.18.2",
+    "mongoose": "^6.9.0"
+  },
+  "devDependencies": {
+    "@types/express": "^4.17.16",
+    "@types/mongoose": "^5.11.97",
+    "nodemon": "^2.0.20",
+    "ts-node": "^10.9.1"
+  }
 }
