--- a/server/package.json
+++ b/server/package.json
@@ -15,8 +15,10 @@
     "mongoose": "^6.9.0"
   },
   "devDependencies": {
+    "@types/cors": "^2.8.13",
     "@types/express": "^4.17.16",
     "@types/mongoose": "^5.11.97",
+    "cors": "^2.8.5",
     "nodemon": "^2.0.20",
     "ts-node": "^10.9.1"
   }
