--- a/client/package.json
+++ b/client/package.json
@@ -17,6 +17,7 @@
     "react-dom": "^18.2.0",
     "react-icons": "^4.7.1",
     "react-router-dom": "^6.8.0",
+    "react-spinners": "^0.13.8",
     "zustand": "^4.3.2"
   },
   "devDependencies": {
