--- a/client/package.json
+++ b/client/package.json
@@ -12,6 +12,7 @@
     "@emotion/react": "^11.10.5",
     "@emotion/styled": "^11.10.5",
     "@mui/material": "^5.11.7",
+    "formik": "^2.2.9",
     "framer-motion": "^9.0.2",
     "react": "^18.2.0",
     "react-dom": "^18.2.0",
@@ -19,6 +20,7 @@
     "react-query": "^3.39.3",
     "react-router-dom": "^6.8.0",
     "react-spinners": "^0.13.8",
+    "yup": "^1.0.0",
     "zustand": "^4.3.2"
   },
   "devDependencies": {
