--- a/server/package.json
+++ b/server/package.json
@@ -10,8 +10,11 @@
   "author": "Anthony Chablov",
   "license": "MIT",
   "dependencies": {
+    "bcryptjs": "^2.4.3",
     "dotenv": "^16.0.3",
     "express": "^4.18.2",
+    "jsonwebtoken": "^9.0.0",
+    "jwt-decode": "^3.1.2",
     "mongoose": "^6.9.0"
   },
   "devDependencies": {
