--- a/server/package.json
+++ b/server/package.json
@@ -18,8 +18,10 @@
     "mongoose": "^6.9.0"
   },
   "devDependencies": {
+    "@types/bcryptjs": "^2.4.2",
     "@types/cors": "^2.8.13",
     "@types/express": "^4.17.16",
+    "@types/jsonwebtoken": "^9.0.1",
     "@types/mongoose": "^5.11.97",
     "cors": "^2.8.5",
     "nodemon": "^2.0.20",
