--- a/server/package.json
+++ b/server/package.json
@@ -16,6 +16,7 @@
     "envalid": "^7.3.1",
     "express": "^4.18.2",
     "express-session": "^1.17.3",
+    "http-errors": "^2.0.0",
     "jsonwebtoken": "^9.0.0",
     "jwt-decode": "^3.1.2",
     "mongoose": "^6.9.0"
@@ -25,6 +26,7 @@
     "@types/cors": "^2.8.13",
     "@types/express": "^4.17.16",
     "@types/express-session": "^1.17.6",
+    "@types/http-errors": "^2.0.1",
     "@types/jsonwebtoken": "^9.0.1",
     "@types/mongoose": "^5.11.97",
     "cors": "^2.8.5",
