--- a/client/package.json
+++ b/client/package.json
@@ -25,6 +25,7 @@
     "react-query": "^3.39.3",
     "react-router-dom": "^6.8.0",
     "react-spinners": "^0.13.8",
+    "use-local-storage": "^2.3.6",
     "yup": "^1.0.0",
     "zustand": "^4.3.2"
   },
