--- a/server/package.json
+++ b/server/package.json
@@ -13,14 +13,15 @@
   "dependencies": {
     "bcryptjs": "^2.4.3",
     "connect-mongo": "^4.6.0",
+    "cors": "^2.8.5",
     "dotenv": "^16.0.3",
     "envalid": "^7.3.1",
     "express": "^4.18.2",
     "express-session": "^1.17.3",
     "http-errors": "^2.0.0",
-    "jsonwebtoken": "^9.0.0",
     "jwt-decode": "^3.1.2",
-    "mongoose": "^6.9.0"
+    "mongoose": "^6.9.0",
+    "ts-node": "^10.9.1"
   },
   "devDependencies": {
     "@flydotio/dockerfile": "^0.2.16",
@@ -30,9 +31,6 @@
     "@types/express-session": "^1.17.6",
     "@types/http-errors": "^2.0.1",
     "@types/jsonwebtoken": "^9.0.1",
-    "@types/mongoose": "^5.11.97",
-    "cors": "^2.8.5",
-    "nodemon": "^2.0.20",
-    "ts-node": "^10.9.1"
+    "@types/mongoose": "^5.11.97"
   }
 }
