--- a/server/package.json
+++ b/server/package.json
@@ -21,6 +21,7 @@
     "http-errors": "^2.0.0",
     "jwt-decode": "^3.1.2",
     "mongoose": "^6.9.0",
+    "nodemon": "^2.0.22",
     "ts-node": "^10.9.1"
   },
   "devDependencies": {
