--- a/server/package.json
+++ b/server/package.json
@@ -33,6 +33,7 @@
     "@types/express-session": "^1.17.7",
     "@types/http-errors": "^2.0.1",
     "@types/jsonwebtoken": "^9.0.1",
-    "@types/mongoose": "^5.11.97"
+    "@types/mongoose": "^5.11.97",
+    "typescript": "^5.1.6"
   }
 }
